.happypack/s-1086224800
SyntaxError: Adjacent JSX elements must be wrapped in an enclosing tag (107:10)

[0m [90m 105 | [39m      [33m<[39m[33m/[39m[33mPaper[39m[33m>[39m
 [90m 106 | [39m    [33m<[39m[33m/[39m[33mCol[39m[33m>[39m [33m<[39m [33m/[39m[33mRow[39m[33m>[39m
[31m[1m>[22m[39m[90m 107 | [39m          [33m<[39m br[33m/[39m [33m>[39m [33m<[39m[33mRow[39m[33m>[39m
 [90m     | [39m          [31m[1m^[22m[39m
 [90m 108 | [39m      [33m<[39m[33mCol[39m xs[33m=[39m{[35m12[39m} lg[33m=[39m{[35m8[39m}[33m>[39m
 [90m 109 | [39m        [33m<[39m[33mRow[39m className[33m=[39m[32m"animated slideInUp"[39m[33m>[39m
 [90m 110 | [39m          [33m<[39m[33mCol[39m xs[33m=[39m{[35m12[39m} lg[33m=[39m{[35m12[39m}[33m>[39m[0m

BabelLoaderError: SyntaxError: Adjacent JSX elements must be wrapped in an enclosing tag (107:10)

[0m [90m 105 | [39m      [33m<[39m[33m/[39m[33mPaper[39m[33m>[39m
 [90m 106 | [39m    [33m<[39m[33m/[39m[33mCol[39m[33m>[39m [33m<[39m [33m/[39m[33mRow[39m[33m>[39m
[31m[1m>[22m[39m[90m 107 | [39m          [33m<[39m br[33m/[39m [33m>[39m [33m<[39m[33mRow[39m[33m>[39m
 [90m     | [39m          [31m[1m^[22m[39m
 [90m 108 | [39m      [33m<[39m[33mCol[39m xs[33m=[39m{[35m12[39m} lg[33m=[39m{[35m8[39m}[33m>[39m
 [90m 109 | [39m        [33m<[39m[33mRow[39m className[33m=[39m[32m"animated slideInUp"[39m[33m>[39m
 [90m 110 | [39m          [33m<[39m[33mCol[39m xs[33m=[39m{[35m12[39m} lg[33m=[39m{[35m12[39m}[33m>[39m[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)